--- a/index.html
+++ b/index.html
@@ -6,9 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome_Birthday</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <div class="container">
+        <h1>Palindrome Birthday 🎂🎈</h1>
+        <label for="dob-input">Date of Birth: </label>
+        <input type="date" id="dob-input">
+        <button id="show-btn">Show</button>
+        <p id="result"></p>
+    </div>
+    <footer>
+        <p>© | 2022 | <a href="https://sudiptachakraborty.netlify.app/" class="portfolio" target="_blank">Sudipta
+                Chakraborty</a></p>
+        <ul class="footer-list">
+            <li>
+                <a href="https://github.com/SudiptaChakraborty51" class="links" target="_blank">
+                    <img src="images/icons8-github.svg">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/sudipta-chakraborty-4a371a212/" class="links" target="_blank">
+                    <img src="images/icons8-linkedin.svg">
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/Sudipta41158180" class="links" target="_blank">
+                    <img src="images/icons8-twitter.svg">
+                </a>
+            </li>
+            <li>
+                <a href="https://t.me/sudichakraborty" class="links" target="_blank">
+                    <img src="images/icons8-telegram-app.svg">
+                </a>
+            </li>
+        </ul>
+    </footer>
     <script src="main.js"></script>
 </body>
 
