final index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <input type="date" id="dob-input">
         <button id="show-btn">Show</button>
         <p id="result"></p>
+        <p id="error"></p>
     </div>
     <footer>
         <p>© | 2022 | <a href="https://sudiptachakraborty.netlify.app/" class="portfolio" target="_blank">Sudipta
