--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome_Birthday</title>
+    <link rel="shortcut icon" href="/images/icons8-birthday-16.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
