feat: loading gif is added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="date" id="dob-input">
         <button id="show-btn">Show</button>
         <p id="error"></p>
+        <div id="loading"></div>
         <p id="result"></p>
     </div>
     <footer>
